Error messages in RegisterPageController added to messages

--- a/portal/src/main/message_keys/messages.properties
+++ b/portal/src/main/message_keys/messages.properties
@@ -298,3 +298,10 @@ sweden_t=Sweden
 liechtenstein_t=Liechtenstein
 luxembourg_t=Luxembourg
 greece_t=Greece
+username.tooLong=Username is too long
+username.invalidChars = Username may only contain letters, digits, spaces and underscores
+username.exists = Username already exists
+password.mismatch = Passwords do not match
+password.tooShort = Password is too short
+password.tooLong = Password is too long
+disclaimer.unchecked = Disclaimer must be accepted
