--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -295,3 +295,10 @@ liechtenstein_t=Liechtenstein
 luxembourg_t=Luxemburg
 greece_t=Griekenland
 Erase_t=Wissen
+username.tooLong=Gebruikersnaam is te lang
+username.invalidChars = Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
+username.exists = Gebrukersnaam bestaat al
+password.mismatch = Wachtwoorden ongelijk
+password.tooShort = Wachtwoord te kort
+password.tooLong = Wachtwoord te lang
+disclaimer.unchecked = Voorwaarden moeten geaccepteerd worden
