translation update and css for sorting select dropdown

--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -189,7 +189,7 @@ UserInformation_t=Gebruikersinformatie
 PasswordChoose_t=Kies een wachtwoord
 PasswordExplain_t=Wachtwoorden dienen 6-30 karakters lang te zijn
 RepeatPassword_t=Herhaal wachtwoord
-FinishRegistration_t=Beëindig registratie
+FinishRegistration_t=Registratie voltooien
 registrationSucceed_t=U bent met succes geregistreerd
 languageDropDownList_t=Taal
 english_t=Engels (eng)
