translations for DMS pages

--- a/portal/src/main/message_keys/messages_en.properties
+++ b/portal/src/main/message_keys/messages_en.properties
@@ -327,7 +327,7 @@ dms.page.edit = Edit this page
 dms.image.not.exist = This image does not exist
 dms.image.create = Create new image
 dms.image.create.step.1 = Choose a name for the new image
-dms.image.create.step.2 = Pres "Go to Upload" to choose and upload an image from your own file system.
+dms.image.create.step.2 = Press "Go to Upload" to choose and upload an image from your own file system.
 dms.image.choose = Choose an image
 dms.image.list = Image list
 dms.image.change = Change this image
@@ -335,3 +335,4 @@ dms.html.editor.show.hide = Show / Hide HTML editor
 dms.versions = Versions
 dms.version.approve.explain = By approving a version you permanently delete all the other versions of the page
 dms.version.approve = Approve this version
+search.order.by = Order by
