--- a/portal/src/main/message_keys/messages_nl.properties
+++ b/portal/src/main/message_keys/messages_nl.properties
@@ -302,3 +302,34 @@ password.mismatch = Wachtwoorden ongelijk
 password.tooShort = Wachtwoord te kort
 password.tooLong = Wachtwoord te lang
 disclaimer.unchecked = Voorwaarden moeten geaccepteerd worden
+dms.administration.title = Beheer
+dms.administration.pages = Paginas beheren
+dms.administration.images = Afbeeldingen beheren
+dms.administration.users = Gebruikers beheren
+dms.edit = Bewerken
+dms.save = Bewaren
+dms.delete = Verwijderen
+dms.create = Aanmaken
+dms.update = Aanpassen
+dms.cancel = Annuleren
+dms.upload = Uploaden
+dms.goto.upload = Ga naar Uploaden
+dms.existing.pages = Bestaande paginas
+dms.existing.images = Bestaande afbeeldingen
+dms.page.not.exist = Deze pagina bestaat niet
+dms.page.create = Maak een nieuwe pagina aan
+dms.page.create.step.1 = Voor het aanmaken van een pagina vul in het pad (als gewenst) en de naam van de nieuwe pagina. De naam van de pagina moet eindigen met .dml
+dms.page.create.step.2 =  Het basis pad wordt automatisch aangemaakt. Daarop volgende paden zijn niet verplicht maar kunnen wel helpen met het ordennen en overzicht van de paginas.
+dms.page.edit = Deze pagina bewerken
+dms.image.not.exist = Afbeelding bestaat niet
+dms.image.create = Abeelding aanmaken
+dms.image.create.step.1 = Kies een naam voor de afbeelding
+dms.image.create.step.2 = Druk op "Ga naar upload" om dan een afbeelding van uw filesysteem te uploaden.
+dms.image.choose = Kies een afbeelding
+dms.image.list = Afbeelding lijst
+dms.image.change = Afbeelding aanpassen
+dms.html.editor.show.hide = Toon / verberg HTML editor
+dms.version.management = Versiebeheer
+dms.version.approve.explain = Door een versie goed te keuren worden alle andere versies verwijderd.
+dms.version.approve = Deze versie goedkeuren
+search.order.by = Sorteren op
