replaced logos for ABM

--- a/portal/src/main/message_keys/messages_no.properties
+++ b/portal/src/main/message_keys/messages_no.properties
@@ -19,22 +19,22 @@
 # permissions and limitations under the Licence.
 #
 
-MyCodeOfConduct_t=Jeg forstår at Mitt Europeana gir meg mulighet til å generere tags for alle objekter jeg måtte ønske .Jeg\
+MyCodeOfConduct_t=Jeg forstår at Mitt Norvegiana gir meg mulighet til å generere tags for alle objekter jeg måtte ønske .Jeg\
             aksepterer at jeg ikke kan generere tags som kan oppfattes som injurierende, skadelige, truende, ulovlige,\
             nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller\
             offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Ved å klikke i denne\
             boksen godtar jeg å følge denne avtalen, og forstår at dersom jeg bryter mot denne, vil jeg bli utestengt\
-            fra Mitt Europeana.
-MyCodeOfConductRequired_t=Du må godta reglene for oppførsel for å registrere deg til Mitt Europeana
+            fra Mitt Norvegiana.
+MyCodeOfConductRequired_t=Du må godta reglene for oppførsel for å registrere deg til Mitt Norvegiana
 IAgree_t=Jeg godtar
 Contributor_t=Bidragsyter
 Contributors_t=Bidragsytere
 Country_t=Land
 Sector_t=Sektor
 Partner_t=Partner
-PartnerExplain_t=Dette er pertnernettverket som saamarbeidet for å virkeliggjøre Europeana, og som representerer Europeana i deres land og profesjonelle institusjoner.
+PartnerExplain_t=Dette er pertnernettverket som saamarbeidet for å virkeliggjøre Norvegiana, og som representerer Norvegiana i deres land og profesjonelle institusjoner.
 ContributorExplain_t=Dette er organisasjonene som bidrar med innhold, digilae malerier, bøker, kringkastet materiale etc. Noen av disse er samlingsportaler. Culture.fr er den største portalen som bidrar med innhold fra 480 institusjoner i Frankrike, inkluder Louvre og Mes\ee d'Orsay. Antallet organiasjoner som bidrar til en portal vises i parantes, f.eks Videoactive (10)
-AggregatorExplain_t=En portal samler materiale fra en rekke andre bidragsytere, viser det på egne nettsteder og kanaliserer det inn i Europeana.
+AggregatorExplain_t=En portal samler materiale fra en rekke andre bidragsytere, viser det på egne nettsteder og kanaliserer det inn i Norvegiana.
 RequiredField_t=Dette er et oblogatorisk felt
 EnterValidEmail_t=Vær vennlig å skriv inn en gyldig emailadresse
 LoggedInAs_t=Logget inn som
@@ -43,11 +43,11 @@ SavedSearches_t=Lagrede søk
 SavedTags_t=Lagrede tags
 LogIn_t=Logg inn
 LogOut_t=Logg ut
-PersonalPage=Mitt Europeana
-FeedbackResponse_t=Mange takk for din tilbakemelding. Dersom din melding innebærer at et medlem av Europeana-teamet, vil et svar komme så snart det er praktisk mulig.. Et raskt svar vil fordre at spørsmaålet stilles på engelsk.
-EnewsOptin_t=Oppdater meg på ny utvikling av Europeana
+PersonalPage=Mitt Norvegiana
+FeedbackResponse_t=Mange takk for din tilbakemelding. Dersom din melding innebærer at et medlem av Norvegiana-teamet, vil et svar komme så snart det er praktisk mulig.. Et raskt svar vil fordre at spørsmaålet stilles på engelsk.
+EnewsOptin_t=Oppdater meg på ny utvikling av Norvegiana
 UserConduct_t=Brukeroppførsel
-UserConductAgree_t=Jeg er inneforstått med at Mitt Europeana gir meg muligheter til å tagge et hvert objekt. Jeg vil ikke generere noen tag som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Gjennom å klikke på denne boksen sier jeg meg enig i å følge disse reglren, og er inneforståått med at brudd kan avslutte mitt medlemskap i Mitt uropeana. KLIKK FOR ENIGHET:
+UserConductAgree_t=Jeg er inneforstått med at Mitt Norvegiana gir meg muligheter til å tagge et hvert objekt. Jeg vil ikke generere noen tag som kan oppfattes som injurierende, skadelige, truende, ulovlige, nedsettende, støtende, oppviglerske, pornografiske, obskøne, svindlende, invaderende i privatrettslig eller offentlig forstand, hatefulle, eller rasistiske, etniske eller på annet vis anstøtende. Gjennom å klikke på denne boksen sier jeg meg enig i å følge disse reglren, og er inneforståått med at brudd kan avslutte mitt medlemskap i Mitt uropeana. KLIKK FOR ENIGHET:
 FirstName_t=Fornavn
 lastName_t=Etternavn
 NoScript_t=Best bruk av dette nettstedet fordrer bruk av Javaskript
@@ -58,7 +58,7 @@ Partners_t=Partnere
 Timeline_t=Tidslinje
 ThoughtLab_t=Tankelaboratorium
 ChooseLanguage_t=Velg språk
-ThisIsEuropeana_t=Dette er Europeana
+ThisIsEuropeana_t=Dette er Norvegiana
 APlaceToShareIdeas_t=et sted for inspirasjon og ideer. Søk i de kulturelle samlingene i Europa, finn nye brukerveier og del dine funn
 FindOutMore_t=Finn ut mere
 Search_t=Søk
@@ -80,7 +80,7 @@ BrowseThroughTime_t=Browse via tidslinje
 NewContent_t=Nytt innhold
 FromOurParnters_t=Fra våre partner-museer, arkiver, bibliotek og audiovisuelle samlinger
 AboutUs_t=Om oss
-UsingEuropeana_t=Bruk av Europeana
+UsingEuropeana_t=Bruk av Norvegiana
 Accessibility_t=Tilgjengelighet
 Sitemap_t=Nettkart
 TermsAndConditions_t=Betingelser og vilkår
@@ -88,7 +88,7 @@ Privacy_t=Privatvern
 LanguagePolicy_t=Språkpolitikk
 Contacts_t=Kontakter
 FundedBy_t=del-finansiert av Den Europeiske Union
-AltLogoEuropeana_t=logo Europeana tenk kultur
+AltLogoEuropeana_t=logo Norvegiana tenk kultur
 AltHome_t=Klikk her for å gå tilbake til Europeanas hjemmeside
 RefineYourSearch_t=Begrens søket
 ByLanguage_t=via språk
@@ -134,7 +134,7 @@ EmailAddress_t=Emailadresse
 EmailSent_t=Email sendt
 EmailSendFailed_t=Email kunne ikke sendes
 Send_t=Send
-SaveToPersonalPage=Lagre i Mitt Europeana
+SaveToPersonalPage=Lagre i Mitt Norvegiana
 ItemSaved_t=Objekt lagret
 ItemSaveFailed_t=Lagring av objekt feilet
 Error_t=Feil
@@ -162,9 +162,9 @@ NoSavedSearches_t=Ingen lagrede søk
 NoSavedTags_t=Ingen lagrede tags
 DateSaved_t=Dato lagret
 Remove_t=Fjern
-EmailWelcome_t=Velkommen til Mitt Europeana
+EmailWelcome_t=Velkommen til Mitt Norvegiana
 EmailClickToConfirm_t=Klikk på denne lenken for å bekrefte registreringen
-EmailEuropeanaTeam_t=Europeana-teamet
+EmailEuropeanaTeam_t=Norvegiana-teamet
 Results_t=Resultater
 InvalidQuery_t=Ugyldig spørring
 FeatureDisabled_t=Denne funksjonen er midlertidig ute av bruk.
