--- a/portal/src/main/message_keys/messages.properties
+++ b/portal/src/main/message_keys/messages.properties
@@ -298,6 +298,7 @@ sweden_t=Sweden
 liechtenstein_t=Liechtenstein
 luxembourg_t=Luxembourg
 greece_t=Greece
+search.order.by = Order by
 username.tooLong=Username is too long
 username.invalidChars = Username may only contain letters, digits, spaces and underscores
 username.exists = Username already exists
@@ -327,13 +328,13 @@ dms.page.create.step.2 =  The base path will be automatically created. Paths tha
 dms.page.edit = Edit this page
 dms.image.not.exist = This image does not exist
 dms.image.create = Create new image
-dms.image.create.step.1 = Choose a name for the new image
-dms.image.create.step.2 = Press "Go to Upload" to choose and upload an image from your own file system.
 dms.image.choose = Choose an image
 dms.image.list = Image list
 dms.image.rename = Rename this image
 dms.image.change = Change this image
 dms.image.upload.new = Upload new image
+dms.image.delete.question = Delete this image?
+dms.image.delete.fail = Image could not be deleted
 dms.html.editor.show.hide = Show / Hide HTML editor
 dms.versions = Versions
 dms.version.approve.explain = By approving a version you permanently delete all the other versions of the page
