--- a/portal/src/main/message_keys/messages_en.properties
+++ b/portal/src/main/message_keys/messages_en.properties
@@ -316,6 +316,8 @@ dms.create = Create
 dms.update = Update
 dms.cancel = Cancel
 dms.upload = Upload
+dms.change = Change
+dms.find = find
 dms.goto.upload = Go to Upload
 dms.existing.pages = Existing pages
 dms.existing.images = Existing images
@@ -324,6 +326,7 @@ dms.page.create = Create a new page
 dms.page.create.step.1 = To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
 dms.page.create.step.2 =  The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
 dms.page.edit = Edit this page
+dms.page.list = Page list
 dms.image.not.exist = This image does not exist
 dms.image.create = Create new image
 dms.image.choose = Choose an image
@@ -333,4 +336,18 @@ dms.html.editor.show.hide = Show / Hide HTML editor
 dms.versions = Versions
 dms.version.approve.explain = By approving a version you permanently delete all the other versions of the page
 dms.version.approve = Approve this version
+dms.user.change.role.step.1 = Fill in the name or email of the user whose role you want to change
+dms.user.change.role.step.2 = Press "Find"
+dms.user.change.role.step.3 = Select the new role for the user from the drop-down list
+dms.user.change.role.step.4 = Press "Change"
+dms.user.find = Find a user
+dms.user.not.found = No user found matching your input
+dms.user.role.choose = Choose a user-role
+dms.user.role.administrator = Administrator
+dms.user.role.public = Reqular user
+dms.user.role.super = Super user
+dms.user.role.current = Current role
+dms.user.role.new = New role
+dms.user.role.set.to = now has the role
+
 search.order.by = Order by
