footer images and links, mine ftl finetuning, homepage ajax to cms

--- a/portal/src/main/message_keys/messages_en.properties
+++ b/portal/src/main/message_keys/messages_en.properties
@@ -349,5 +349,7 @@ dms.user.role.super = Super user
 dms.user.role.current = Current role
 dms.user.role.new = New role
 dms.user.role.set.to = now has the role
+user.last.login.date = Last login date
+user.registration.date = Registration date
 
 search.order.by = Order by
