Login, register, password pages styling

--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -327,3 +327,4 @@ user.registration.date=Registration date
 username.exists=Username already exists
 username.invalidChars=Username may only contain letters, digits, spaces and underscores
 username.tooLong=Username is too long
+form.submit=Submit
