--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -197,6 +197,7 @@ dc_source_t=Source
 dc_subject_t=Subject
 dc_title_t=Title
 dc_type_t=Type
+dcterms_created=Date
 dcterms_alternative_t=Alternative Title
 dcterms_conformsTo_t=Conforms to
 dcterms_hasFormat_t=Has format
@@ -327,3 +328,11 @@ user.registration.date=Registration date
 username.exists=Username already exists
 username.invalidChars=Username may only contain letters, digits, spaces and underscores
 username.tooLong=Username is too long
+europeana_country_t=Country
+europeana_dataProvider_t=Provider
+europeana_provider_t=Provider
+europeana_type_t=Type
+abm_contentProvider_t=Provider
+abm_county_t=County
+abm_dataprovider_t=Provider
+abm_municipality_t=Municipality
