Norvegiana ... fulldoc image link turned off Login via ajax Register-request not yet via ajax
Merge branch 'master' of github.com:delving/norvegiana into norvegiana_master

Conflicts:
	portal/src/main/resources/i18n/messages_en.properties
	portal/src/main/resources/i18n/messages_no.properties
	portal/src/main/webapp/WEB-INF/templates/theme/basic/brief-doc-window.ftl

--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -322,4 +322,9 @@ europeana_type_t=Type
 abm_contentProvider_t=Provider
 abm_county_t=County
 abm_municipality_t=Municipality
+user.last.login.date=Last login date
+user.registration.date=Registration date
 form.submit=Submit
+login.required=You must login or register
+login.failed=Login failed. Please try again
+county=county
