--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -337,3 +337,4 @@ abm_county_t=County
 abm_dataprovider_t=Provider
 abm_municipality_t=Municipality
 form.submit=Submit
+login.required=You must login or register
